# Luminus

./: .gitignore  README.md  lefthook.yml
.github/workflows/: build.yml  check.yml  ci.yml
desktop/: biome.json  package.json  vite.config.ts
desktop/src/: App.tsx  index.css  settings-main.tsx  settings.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 20260210215308_create_initial_schema.sql
desktop/src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  scanner.rs  state.rs
desktop/src-tauri/src/clip/: model.rs
desktop/src-tauri/src/commands/: images.rs  scanner.rs
desktop/src-tauri/src/models/: image.rs  scan.rs  video.rs
desktop/src-tauri/src/scanner/: metadata.rs  thumbnail.rs  video_metadata.rs  walker.rs
desktop/src/api/: index.ts  types.ts
desktop/src/components/: content-header.tsx  filter-panel.tsx  image-grid.tsx  import-queue.tsx  settings.tsx  sidebar.tsx  top-bar.tsx  welcome-splash.tsx
scripts/: fetch-ffmpeg.sh  split-clip.py
