[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4.29"
kamadak-exif = "0.6.1"
thiserror = "2.0.18"
anyhow = "1.0.101"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlite-vec = "0.1.6"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
futures = "0.3.31"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }

