[package]
name = "luminus"
version = "0.1.0"
description = "Photography workspace"
authors = ["jeronimo.m.mendes@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "luminus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4.29"
kamadak-exif = "0.6.1"
thiserror = "2.0.18"
anyhow = "1.0.101"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlite-vec = { git = "https://github.com/vlasky/sqlite-vec", version = "0.2.4-alpha" }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
futures = "0.3.31"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
chrono = { version = "0.4.43", features = ["serde"] }
zerocopy = "0.8.39"
image = "0.25.9"
ort = { version = "2.0.0-rc.11", features = ["coreml", "xnnpack"] }
tokenizers = "0.22.2"
ndarray = "0.17.2"
timelog = "1.0.7"
rayon = "1.11.0"
mp4 = "0.10"
video-rs = { version = "0.10.5", features = ["ndarray"] }

# this optimizes all dependencies otherwise
# inference is slow as fuck on dev
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 2
